--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "svelte-preprocess": "^3.1.1",
+    "svelte-routing": "^1.4.0"
   },
   "devDependencies": {
+    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.21.4",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -23,6 +26,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.0",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.12.1"
+    "svelte": "^3.12.1",
+    "svelte-preprocess-sass": "^0.2.0"
   }
 }
