--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
-  "name": "f1-stats",
-  "version": "1.0.0",
-  "description": "F1 lap time data for qualifying and races",
-  "main": "src/index.js",
+  "name": "f1-stats-react",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "build": "rollup -c",
-    "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
-    "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "sirv-cli": "^0.4.4",
-    "svelte-preprocess": "^3.1.1",
-    "svelte-routing": "^1.4.0"
-  },
-  "devDependencies": {
-    "node-sass": "^4.12.0",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^1.21.4",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-livereload": "^1.0.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.1.0",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.12.1",
-    "svelte-preprocess-sass": "^0.2.0"
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/styles": "^4.5.0",
+    "dayjs": "^1.8.16",
+    "fontfaceobserver": "^2.1.0",
+    "next": "9.1.1",
+    "next-fonts": "^0.19.0",
+    "react": "16.10.2",
+    "react-dom": "16.10.2"
   }
 }
