--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fontfaceobserver": "^2.1.0",
     "next": "9.1.1",
     "next-fonts": "^0.19.0",
+    "prop-types": "^15.7.2",
     "react": "16.10.2",
     "react-dom": "16.10.2"
   }
