--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "next-fonts": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "react-dom": "16.10.2",
+    "styled-components": "^4.4.1"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.6"
   }
 }
