--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "f1-stats-react",
+  "name": "f1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/styles": "^4.5.0",
-    "dayjs": "^1.8.16",
+    "@chakra-ui/react": "^1.8.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "axios": "^0.26.0",
+    "dayjs": "^1.10.7",
     "fontfaceobserver": "^2.1.0",
-    "next": "9.1.1",
-    "next-fonts": "^0.19.0",
-    "prop-types": "^15.7.2",
-    "react": "16.10.2",
-    "react-dom": "16.10.2",
-    "react-swipeable-views": "^0.13.3",
-    "styled-components": "^4.4.1"
+    "framer-motion": "^6",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.6"
+    "@types/node": "17.0.19",
+    "@types/react": "17.0.39",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0",
+    "typescript": "4.5.5"
   }
 }
