--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.8.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.0",
     "dayjs": "^1.10.7",
     "fontfaceobserver": "^2.1.0",
