--- a/package.json
+++ b/package.json
@@ -10,29 +10,23 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.0",
     "dayjs": "^1.10.7",
     "fontfaceobserver": "^2.1.0",
     "framer-motion": "^6",
-    "next": "12.1.6",
+    "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.4.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.19",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.21",
     "prettier": "2.5.1",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.5.5"
   }
 }
