--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "classnames": "^2.3.2",
     "dayjs": "^1.10.7",
     "fontfaceobserver": "^2.1.0",
     "framer-motion": "^6",
+    "lodash.merge": "^4.6.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/lodash.merge": "^4.6.7",
     "@types/node": "17.0.19",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.14",
@@ -27,6 +30,6 @@
     "postcss": "^8.4.21",
     "prettier": "2.5.1",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.5.5"
+    "typescript": "5.0.2"
   }
 }
