--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lodash.merge": "^4.6.2",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
