Initial steps of migration

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "fontfaceobserver": "^2.1.0",
     "framer-motion": "^6",
     "lodash.merge": "^4.6.2",
-    "next": "13.2.4",
+    "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1"
