--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-select": "^1.2.1",
     "axios": "^0.26.0",
+    "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "dayjs": "^1.10.7",
     "fontfaceobserver": "^2.1.0",
     "framer-motion": "^6",
     "lodash.merge": "^4.6.2",
+    "lucide-react": "^0.219.0",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
